--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>TruthGuard AI</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
+            <img src="icons/icon48.png" class="logo">
             <h1>TruthGuard AI</h1>
-            <p id="page-title">Analyzing current page...</p>
         </header>
 
         <div id="loading-view">
@@ -18,16 +19,42 @@
 
         <div id="results-view" class="hidden">
             <div class="card">
-                <h3>Source Analysis</h3>
-                <div id="source-analysis-content"></div>
+                <h3 class="card-header">Credibility Score</h3>
+                <div class="score-container">
+                    <div class="score-gauge">
+                        <div class="score-gauge__body">
+                            <div class="score-gauge__fill"></div>
+                            <div class="score-gauge__cover"></div>
+                        </div>
+                    </div>
+                    <div id="score-text" class="score-text">--/100</div>
+                </div>
+                 <p id="summary-text" class="summary"></p>
             </div>
             <div class="card">
-                <h3>Credibility Score & Summary</h3>
-                <div id="initial-analysis-content"></div>
+                <h3 class="card-header">Source Analysis</h3>
+                <div id="source-analysis-content">
+                    <div class="bias-meter">
+                        <div class="bias-meter__label">Left</div>
+                        <div class="bias-meter__bar">
+                            <div id="bias-indicator" class="bias-meter__indicator"></div>
+                        </div>
+                        <div class="bias-meter__label">Right</div>
+                    </div>
+                    <div class="factuality-container">
+                        <strong>Factuality:</strong> <span id="factuality-rating" class="tag"></span>
+                    </div>
+                </div>
             </div>
             <div class="card">
-                <h3>Fact-Check Results</h3>
+                <h3 class="card-header">Fact-Check Results</h3>
                 <div id="fact-check-content"></div>
+            </div>
+        </div>
+        
+        <div id="youtube-view" class="hidden">
+            <div class="card">
+                <button id="analyze-video-button">Analyze YouTube Video</button>
             </div>
         </div>
 
