--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,56 +11,73 @@
             <img src="icons/icon48.png" class="logo">
             <h1>TruthGuard AI</h1>
         </header>
-
-        <div id="loading-view">
-            <div class="loader"></div>
-            <p>Analyzing article, please wait...</p>
-        </div>
-
-        <div id="results-view" class="hidden">
-            <div class="card">
-                <h3 class="card-header">Credibility Score</h3>
-                <div class="score-container">
-                    <div class="score-gauge">
-                        <div class="score-gauge__body">
-                            <div class="score-gauge__fill"></div>
-                            <div class="score-gauge__cover"></div>
-                        </div>
-                    </div>
-                    <div id="score-text" class="score-text">--/100</div>
-                </div>
-                 <p id="summary-text" class="summary"></p>
-            </div>
-            <div class="card">
-                <h3 class="card-header">Source Analysis</h3>
-                <div id="source-analysis-content">
-                    <div class="bias-meter">
-                        <div class="bias-meter__label">Left</div>
-                        <div class="bias-meter__bar">
-                            <div id="bias-indicator" class="bias-meter__indicator"></div>
-                        </div>
-                        <div class="bias-meter__label">Right</div>
-                    </div>
-                    <div class="factuality-container">
-                        <strong>Factuality:</strong> <span id="factuality-rating" class="tag"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <h3 class="card-header">Fact-Check Results</h3>
-                <div id="fact-check-content"></div>
-            </div>
-        </div>
-        
         <div id="youtube-view" class="hidden">
             <div class="card">
                 <button id="analyze-video-button">Analyze YouTube Video</button>
             </div>
         </div>
-
-        <div id="error-view" class="hidden">
-            <p>Could not analyze this page. Please try a different article.</p>
+        <div id="loading-view">
+            <div class="loader"></div>
+            <p>Analyzing, please wait...</p>
         </div>
+        <div id="results-view" class="hidden">
+            <div class="card">
+                <h3 class="card-header">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
+                    Credibility Score
+                </h3>
+                <div class="score-container">
+                    <div class="score-gauge"><div class="score-gauge__body"><div class="score-gauge__fill"></div><div class="score-gauge__cover"></div></div></div>
+                    <div id="score-text" class="score-text">--/100</div>
+                </div>
+                 <p id="summary-text" class="summary"></p>
+            </div>
+            <div class="card">
+                <h3 class="card-header">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
+                    Source Analysis
+                </h3>
+                <div class="source-analysis-grid">
+                    <div class="source-item">
+                        <strong>Factuality:</strong> <span id="factuality-rating" class="tag"></span>
+                    </div>
+                    <div class="source-item">
+                        <strong>Bias:</strong> <span id="bias-text" class="tag"></span>
+                    </div>
+                </div>
+                <div class="bias-meter">
+                    <div class="bias-meter__label">Left</div>
+                    <div class="bias-meter__bar"><div id="bias-indicator" class="bias-meter__indicator"></div></div>
+                    <div class="bias-meter__label">Right</div>
+                </div>
+            </div>
+            <div class="card">
+                <h3 class="card-header">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                    Fact-Check Results
+                </h3>
+                <div id="fact-check-content"></div>
+            </div>
+
+            <div id="image-origin-card" class="card hidden">
+                <h3 class="card-header">
+                    <svg></svg>
+                    Image Origin
+                </h3>
+                <a id="reverse-image-search-link" class="button-link" href="#" target="_blank">
+                    Search for this image on Google
+                </a>
+            </div>
+
+            <div class="card">
+                <h3 class="card-header">
+                    <svg></svg>
+                    Visual Context Verification
+                </h3>
+                <div id="visual-context-content"></div>
+            </div>
+        </div>
+        <div id="error-view" class="hidden"><p>Could not analyze this page.</p></div>
     </div>
     <script src="script.js"></script>
 </body>
