--- a/extension/popup.html
+++ b/extension/popup.html
@@ -44,6 +44,9 @@
                     <div class="source-item">
                         <strong>Bias:</strong> <span id="bias-text" class="tag"></span>
                     </div>
+                     <div class="source-item">
+                        <strong>Domain Age:</strong> <span id="domain-age" class="tag"></span>
+                    </div>
                 </div>
                 <div class="bias-meter">
                     <div class="bias-meter__label">Left</div>
